# easy-book

./: .replit  Procfile  README.md  config.py  first.ipynb  index.md  main.py  pyproject.toml
.github/workflows/: main.yml
.jupyter/: jupyter_server_config.py  migrated
.jupyter/lab/workspaces/: default-37a8.jupyterlab-workspace
